scripts/nullness/nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8.txt
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java:38: error: [initialization.fields.uninitialized] the constructor does not initialize fields: title, text, created, tags, authorId
    public Post() {
           ^
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Blog.java:9: error: [initialization.field.uninitialized] the default constructor does not initialize field id
    public ObjectId id;
                    ^
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Author.java:31: error: [initialization.fields.uninitialized] the constructor does not initialize fields: firstName, lastName, mailAdd, aboutMe
    public Author() {
           ^
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/PostComments.java:37: error: [initialization.fields.uninitialized] the constructor does not initialize fields: author, mailAdd, comment, created, postId
    public PostComments() {
           ^
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/factory/MongoDBFactory.java:33: error: [return] incompatible types in return.
        return mongoDBFactory;
               ^
  type of expression: @Initialized @Nullable MongoDBFactory
  method return type: @Initialized @NonNull MongoDBFactory
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:40: error: [return] incompatible types in return.
        return author;
               ^
  type of expression: @Initialized @Nullable Author
  method return type: @Initialized @NonNull Author
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:44: error: [return] incompatible types in return.
        return post;
               ^
  type of expression: @Initialized @Nullable Post
  method return type: @Initialized @NonNull Post
Note: ../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors
